:wrench: Fix hook title scroll, snackbar width on mobile

--- a/components/blog/hookTitle/hook-title.styl
+++ b/components/blog/hookTitle/hook-title.styl
@@ -1,10 +1,9 @@
 .hook-title
     position absolute
-    top 8px
     width 36px
     height 36px
     padding 4px
-    margin 0 0 0 8px
+    margin 8px 0 0 8px
     border-radius 18px
     fill var(--content)
     transition fill .2s ease-out, background-color .2s ease-out
@@ -16,4 +15,4 @@
         background-color var(--primary-overlay)
 
     &.-h2
-        top 2px
+        margin-top 2px
