--- a/components/blog/snackbar/snackbar.styl
+++ b/components/blog/snackbar/snackbar.styl
@@ -29,3 +29,8 @@
 
         100%
             bottom -52px
+
+    @media screen and (max-width 568px)
+        &
+            width 90%
+            left 5%
