--- a/public/styles/init.styl
+++ b/public/styles/init.styl
@@ -22,6 +22,10 @@
     font-family Sarabun, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
     box-sizing border-box
 
+html,
+body
+    scroll-behavior smooth
+
 body
     margin 0
     background-color var(--background)
